@@ -130,7 +130,6 @@ http://creativecommons.org/licenses/by-nc-sa/3.0/
         <item>75</item>
         <item>76</item>
         <item>78</item>
-        <!-- New locations start here -->
         <item>80</item>
         <item>82</item>
         <item>84</item>
